[FI-63] 누락 기능 추가